Feature-Agregado seccion oradores al main

--- a/index.html
+++ b/index.html
@@ -108,6 +108,49 @@
         </div>
   </div>
 
+  <!-- oradores-->        
+  <div class="container my-3 ancla" id="oradores">
+    <div class="text-center text-uppercase">
+        <h6>Conoce a los</h6>
+        <h4>Oradores</h4>
+    </div>
+
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="./images/steve.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <span class="badge bg-warning text-dark">JavaScript</span>
+                    <span class="badge bg-info text-white">React</span>
+                    <h5 class="card-title fw-bold">Steve Jobs</h5>
+                  <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum iure cum rem molestiae officiis necessitatibus, eveniet expedita corrupti dolorum, dicta optio odit ducimus, vero quia quis. Ab aliquam eaque voluptates?</p>
+                </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="./images/bill.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <span class="badge bg-warning text-dark">JavaScript</span>
+                <span class="badge bg-info text-white">React</span>
+                <h5 class="card-title fw-bold">Bill Gates</h5>
+              <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum iure cum rem molestiae officiis necessitatibus, eveniet expedita corrupti dolorum, dicta optio odit ducimus, vero quia quis. Ab aliquam eaque voluptates?</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="./images/ada.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <span class="badge bg-secondary text-white">Negocios</span>
+                <span class="badge bg-danger text-white">Startups</span>
+                <h5 class="card-title fw-bold">Ada Lovelace</h5>
+              <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum iure cum rem molestiae officiis necessitatibus, eveniet expedita corrupti dolorum, dicta optio odit ducimus, vero quia quis. Ab aliquam eaque voluptates?</p>
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
 </main>
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
