--- a/index.html
+++ b/index.html
@@ -151,6 +151,24 @@
         </div>
       </div>
 </div>
+
+<!-- lugar y fecha-->        
+<div class="ancla" id="fecha">
+  <div class="card mb-3" >
+      <div class="row g-0">
+        <div class="col-md-6 bg-dark d-flex align-items-center">
+          <img src="./images/honolulu.jpg" class="img-fluid rounded-start flex-shrink-0" alt="...">
+        </div>
+        <div class="col-md-6 bg-dark text-white">
+          <div class="card-body">
+            <h5 class="card-title fw-bold">Bs As - Octubre</h5>
+            <p class="card-text">Buenos Aires es la provincia y localidad más grande del estado de Argentina. En los Estados Unidos, Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad condado consolidada que cubre toda la ciudad (aproximadamente 600 km<span>2</span> de superficie)</p>
+            <a href="" class="btn border-white text-white">Conocé más</a>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
 </main>
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
