Feature-Agregado form para orador al main

--- a/index.html
+++ b/index.html
@@ -169,6 +169,35 @@
       </div>
     </div>
 </div>
+
+<!--form oradores-->
+<div class="container col-10 col-sm-9 col-lg-7 ancla" id="form">
+  <div class="text-center">
+      <h6 class="text-uppercase">Quiero ser un</h6>
+      <h4 class="text-uppercase">Orador</h4>
+      <p>Anótate como orador para dar una <span class="text-dotted">charla ignite</span>. Cuéntanos de qué quieres hablar!</p>            
+  </div>
+
+  <div class="container">
+      <form class="row g-3">
+          <div class="col-md-6">                  
+            <input type="text" class="form-control" id="nombre" placeholder="Nombre">
+          </div>
+
+          <div class="col-md-6">                  
+              <input type="text" class="form-control" id="Apellido" placeholder="Apellido">
+            </div>
+          <div class="mb-1">                    
+              <textarea class="form-control" id="tema" rows="3" placeholder="Sobre qué quieres hablar?"></textarea>
+              <small class="text-muted">Recuerda incluir un título para tu charla</small>
+          </div>
+                          
+          <div class="d-grid gap-2">
+            <button type="submit" class="btn btn-submit">Enviar</button>
+          </div>
+        </form>
+  </div>        
+</div>
 </main>
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
