--- a/index.html
+++ b/index.html
@@ -200,6 +200,20 @@
 </div>
 </main>
 
+<!--footer-->
+<footer class="py-4 mt-4 footer text-center">
+  <nav class="nav justify-content-center border-bottom">
+    <a class="nav-link text-white" href="#">Preguntas Frecuentes</a>    
+    <a class="nav-link text-white" href="#">Contáctanos</a>
+    <a class="nav-link text-white" href="#">Prensa</a>
+    <a class="nav-link text-white" href="#">Conferencias</a>
+    <a class="nav-link text-white" href="#">Términos y condiciones</a>
+    <a class="nav-link text-white" href="#">Privacidad</a>
+    <a class="nav-link text-white" href="#">Estudiantes</a>
+  </nav>
+  <span class="text-muted">&copy; 2023 Alancay, Matías</span>
+</footer>
+
   <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>       
 </body>
