Feature - Agregado enlace a pagina buyTicket.html y clase separacionNavBarIndex para separar el contenido del Navbar

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                       <a class="nav-link" href="#form">Conviértete en orador</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-success" href="#">Comprar tickets</a>
+                      <a class="nav-link text-success" href="./buyTicket.html">Comprar tickets</a>
                     </li>
                 </ul>                  
               </div>
@@ -51,7 +51,7 @@
  <!-- main -->
  <main>
   <!-- carrousel - conferencia-->
-  <div id="conferencia" class="mt-5">
+  <div id="conferencia" class="separacionNavBarIndex">
       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -66,7 +66,7 @@
                   <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro de internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para tí. Te esperamos!</p>                        
                   <div>
                       <a href="#form" class="btn text-white border-white">Quiero ser orador</a>                                                
-                      <a href="#" class="btn btn-ticket ms-3">Comprar tickets</a>                                                   
+                      <a href="./buyTicket.html" class="btn btn-ticket ms-3">Comprar tickets</a>                                                   
                   </div>                        
               </div>                                        
             </div>
@@ -79,7 +79,7 @@
                   <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro de internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para tí. Te esperamos!</p>                        
                   <div>
                       <a href="#form" class="btn text-white border-white">Quiero ser orador</a>                                                
-                      <a href="#" class="btn btn-ticket ms-3">Comprar tickets</a>                                                   
+                      <a href="./buyTicket.html" class="btn btn-ticket ms-3">Comprar tickets</a>                                                   
                   </div>                        
               </div>
             </div>
@@ -90,7 +90,7 @@
                   <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro de internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para tí. Te esperamos!</p>                        
                   <div>
                       <a href="#form" class="btn text-white border-white">Quiero ser orador</a>                                                
-                      <a href="#" class="btn btn-ticket ms-3">Comprar tickets</a>                                                   
+                      <a href="./buyTicket.html" class="btn btn-ticket ms-3">Comprar tickets</a>                                                   
                   </div>                        
               </div>
             </div>
